--- a/report/process.tex
+++ b/report/process.tex
@@ -1,7 +1,7 @@
 \section{Process}
 Udviklingsprocessen er blevet udført agilt ved hjælp af sprints. Vi har i alt kørt 12 sprints, på hver en uge. I starten af processen, lå fokus meget på at designe og diskutere appen, for at gennemtænke alle features og designvalg på forhånd samt skrive det ned. Det sikrer, at appen holder sin røde tråd, selvom der er flere til at udarbejde den. Denne del resulterede i sketches og wireframs, og en styleguide bestående af skrifttyper, størrelser på tekst og afstande samt farveskemaer. De kan ses i bilag X.
 
-Starten på vores udviklingsprocess tog udgangspunkt i SCRUM, dog uden de fleste ceremonier, da vi ikke havde en product owner og scrum master. Undervejs fandt vi dog ud af, at det var meget overkill når vi kun var to, som sad fysisk sammen langt det meste af tiden. Der var for mange små detaljer, der hele tiden skulle udfyldes på trods af vores gode kommunikation. Vi besluttede derfor, at vi ikke behøvede at:
+Starten på vores udviklingsprocess tog udgangspunkt i SCRUM, dog uden de fleste ceremonier, da vi ikke havde en product owner og scrum master. Undervejs fandt vi ud af, at mange af de ting, vi gjorde, var meget overkill når vi kun var to, som sad fysisk sammen langt det meste af tiden. Der var for mange små detaljer, der hele tiden skulle udfyldes på trods af vores gode kommunikation. Vi besluttede derfor, at vi ikke behøvede at:
 
 \begin{itemize}
    \item Skrive dagsorden hver gang, vi havde en arbejdsdag
