Updated Process section

--- a/report/process.tex
+++ b/report/process.tex
@@ -1,7 +1,7 @@
-\section{Process}
+\section{Proces}
 Udviklingsprocessen er blevet udført agilt ved hjælp af sprints. Vi har i alt kørt 12 sprints, på hver en uge. I starten af processen, lå fokus meget på at designe og diskutere appen, for at gennemtænke alle features og designvalg på forhånd samt skrive det ned. Det sikrer, at appen holder sin røde tråd, selvom der er flere til at udarbejde den. Denne del resulterede i sketches og wireframs, og en styleguide bestående af skrifttyper, størrelser på tekst og afstande samt farveskemaer. De kan ses i bilag X.
 
-Starten på vores udviklingsprocess tog udgangspunkt i SCRUM, dog uden de fleste ceremonier, da vi ikke havde en product owner og scrum master. Undervejs fandt vi ud af, at mange af de ting, vi gjorde, var meget overkill når vi kun var to, som sad fysisk sammen langt det meste af tiden. Der var for mange små detaljer, der hele tiden skulle udfyldes på trods af vores gode kommunikation. Vi besluttede derfor, at vi ikke behøvede at:
+Starten på vores udviklingsproces tog udgangspunkt i SCRUM, dog uden de fleste ceremonier, da vi ikke havde en product owner og scrum master. Undervejs fandt vi ud af, at mange af de ting, vi gjorde, var meget overkill når vi kun var to, som sad fysisk sammen langt det meste af tiden. Der var for mange små detaljer, der hele tiden skulle udfyldes på trods af vores gode kommunikation. Vi besluttede derfor, at vi ikke behøvede at:
 
 \begin{itemize}
    \item Skrive dagsorden hver gang, vi havde en arbejdsdag
@@ -9,5 +9,18 @@ Starten på vores udviklingsprocess tog udgangspunkt i SCRUM, dog uden de fleste
    \item Sætte mærker som "Code" eller "Documentation" på små opgaver
 \end{itemize}
 
-På den måde, har vi arbejdet meget agilt i og med, at selv den agile måde at arbejde på har skulle tilpasse sig undervejs til vores arbejdsmetode.
+Med alle disse ceremonier ude af vores arbejdsgang, vil vi ikke længere karakterisere processen som at være SCRUM.
+Vores arbejdsgang blev derfor meget mere simpel, og vi kunne fokusere på at lave de arbejdsopgaver som gav fremdrift i projektet, frem for at skulle holde ceremonier for at vise, hvad vi hver især havde lavet dagen forinden og i løbet af ugen. 
 
+Processen forblev dog stadig meget struktureret, da vi holdt fast i sprints på en uge, samt at vi gjorde brug af en product- og sprint-backlog, til alle de arbejdsopgaver, som skulle udføres. 
+
+Efter hver arbejdsopgave sørgede vi for at holde det, vi havde lavet, op imod vores \textit{Definition of Done}. Det gjorde, at vi f.eks. altid var sikre på, at den kode, som vi lagde på vores master branch, compilede, samt at vores unit- og instrumentation-tests altid var successfulde.
+
+Vi fortsatte ydermere med at lave estimeringer og give hver opgave et antal story points, så vi kunne holde styr på hvor meget vi manglede, og hvilke opgaver, der var store og hvilke der var små. Disse estimeringer blev også brugt til at give os et overblik, da de blev skrevet op i form af et burn-up chart.
+
+\subsection{Burn-up chart}
+Vi har undervejs i projektet gjort brug af et burn-up chart for at se udviklingen i projektet. Det har givet os et overblik over hvor meget vi har været nødt til at tage med i hvert sprint, for at kunne blive færdige til tiden. Vi har også kunne se, at vores projekt har udviklet sig meget i forhold til starten af projektet, og der derfor er kommet flere og flere opgaver i vores backlog.
+
+INDSÆT BURN-UP CHART
+
+Ud fra grafen har vi lavet en udregning, som har fortalt os hvor mange story points, som vi har været nødt til at tage med. Vi sørgede så for altid at tage flere point med i sprintet end der var nødvendigt, da vi næsten altid fik flere opgaver ind efter et sprint var slut. Disse opgaver kom typisk fra en brugertest, men kunne også være som følge af problemer eller idéer, som vi selv kom frem til.
